<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">androidapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="edit_message">Enter a message</string>
	<string name="button_taxchart">TaxChart</string>
	<string name="title_activity_display_message">Message</string>
	<string name="agi1">PC AGI</string>
	<string name="agi2">AGI</string>
	<string name="deduction1">PC Deduction</string>
	<string name="deduction2">Deduction</string>
	<string name="tts">TTS</string>
	<string name="ttsExt">TTSExt</string>

    <string name="Title">Website Title</string>
    <string name="Description">Website Description</string>
    <string name="Logo">Website Logo</string>
    <string name="jsoup">JSoup</string>
    <string name="url">URL</string>
        		
</resources>
